<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#637a91"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/AddStoryButton"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:text="@string/addStory_button"
        android:textColor="#3A8AEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/helpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:text="@string/start_your_adventure"
        android:textColor="#3A8AEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/AddStoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/white"
        android:text="@string/Help_button"
        android:textColor="#3A8AEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

</android.support.constraint.ConstraintLayout>