<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StoryActivity">

    <Button
        android:id="@+id/choice2Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:textColor="#3A8AEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/page0_choice1" />

    <Button
        android:id="@+id/langueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:textColor="#3A8AEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/choice2Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/page0_choice1" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/langueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/storyImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/story_page_image"
                android:scaleType="fitXY"
                tools:src="@drawable/page0" />

            <RelativeLayout
                android:id="@+id/relayout"
                android:layout_width="match_parent"
                android:layout_height="90dp">

                <Button
                    android:id="@+id/stop"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/ic_stop_black_24dp" />

                <Button
                    android:id="@+id/pause"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="46dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toStartOf="@+id/play"
                    android:background="@drawable/ic_pause_circle_filled_black_24dp" />

                <Button
                    android:id="@+id/play"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toStartOf="@+id/stop"
                    android:background="@drawable/ic_play_circle_filled_black_24dp" />
            </RelativeLayout>


            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expandable_text_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:animDuration="200"
                app:maxCollapsedLines="1">

                <TextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:lineSpacingExtra="8sp"
                    android:textSize="16sp"
                    tools:text="@string/page0" />

                <ImageButton
                    android:id="@+id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/collapseim"
                    android:padding="16dp" />
            </com.ms.square.android.expandabletextview.ExpandableTextView>

        </LinearLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>